--- a/store-theme-project-2/styles/css/vtex.flex-layout.css
+++ b/store-theme-project-2/styles/css/vtex.flex-layout.css
@@ -76,11 +76,6 @@
   padding-left: 20px;
 }
 
-/*store theme image*/
-.flexRow--homeBannerDesk {
-  margin-top: 60px;
-}
-
 /* Store theme default*/
 .flexRowContent--menu-link,
 .flexRowContent--main-header {
